# Lab3

Lab3/: CMakeLists.txt  function.cpp  function.h  hello.cpp  main  main.cpp
